Bug 287449 - Kdevelop (current master) crashed when opening Review View with a PHP file
Summary: Kdevelop (current master) crashed when opening Review View with a PHP file
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.60
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 4.2.3
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-24 10:24 UTC by Florian 'branleb' Zumkeller-Quast
Modified: 2011-11-24 18:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian 'branleb' Zumkeller-Quast 2011-11-24 10:24:57 UTC
Application: kdevelop (4.2.60)
KDE Platform Version: 4.6.5 (4.6.5) (Compiled from sources)
Qt Version: 4.7.2
Operating System: Linux 3.0.6 x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- What I was doing when the application crashed:
I opened the "Review" View for a PHP File via context menu->SVN->ShowDifferences.
The Review View opened and then kdevelop crashed

The crash can be reproduced every time.

-- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fceed6f5760 (LWP 4149))]

Thread 16 (Thread 0x7fced904c700 (LWP 4226)):
#0  0x00007fceea5ddbdb in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fceebb995fd in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fcee819109a in ?? () from /usr/lib64/libkdevplatformlanguage.so.4
#3  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#5  0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 15 (Thread 0x7fcecb1de700 (LWP 4249)):
#0  0x00007fceea8ce07f in ?? () from /lib64/libc.so.6
#1  0x00007fceea8b8278 in poll () from /lib64/libc.so.6
#2  0x00007fcee55f4ee1 in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fcee55f531e in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fceebcb594e in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007fceebc885d2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007fceebc8899d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007fceebb95b52 in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#8  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#9  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#10 0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 14 (Thread 0x7fcec9f45700 (LWP 4250)):
#0  0x00007fceea8ba883 in select () from /lib64/libc.so.6
#1  0x00007fceebc65d1b in ?? () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#3  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#4  0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 13 (Thread 0x7fcec473b700 (LWP 4252)):
#0  0x00007fceea5dd85c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fced960230c in ?? () from /usr/lib64/qt4/libQtScript.so.4
#2  0x00007fced9602349 in ?? () from /usr/lib64/qt4/libQtScript.so.4
#3  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#4  0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 12 (Thread 0x7fcec39bf700 (LWP 4261)):
#0  0x00007fceea8b8293 in poll () from /lib64/libc.so.6
#1  0x00007fcee55f4ee1 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fcee55f531e in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fceebcb594e in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007fceebc885d2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007fceebc8899d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007fceebb95b52 in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007fceebc68480 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#8  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#9  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#10 0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 11 (Thread 0x7fcec295d700 (LWP 4342)):
#0  0x00007fceea5dd85c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fcee29a1f1d in ?? () from /usr/lib64/qt4/libQtWebKit.so.4
#2  0x00007fcee29a2049 in ?? () from /usr/lib64/qt4/libQtWebKit.so.4
#3  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#4  0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 10 (Thread 0x7fcebfde5700 (LWP 4763)):
#0  0x00007fceea5dd85c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fceebb9966b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fcee317a085 in ?? () from /usr/lib64/libthreadweaver.so.4
#3  0x00007fcee317c8e3 in ?? () from /usr/lib64/libthreadweaver.so.4
#4  0x00007fcee317c8fc in ?? () from /usr/lib64/libthreadweaver.so.4
#5  0x00007fcee317b547 in ?? () from /usr/lib64/libthreadweaver.so.4
#6  0x00007fcee317b5d8 in ThreadWeaver::Thread::run() () from /usr/lib64/libthreadweaver.so.4
#7  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#8  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#9  0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 9 (Thread 0x7fcebf5e4700 (LWP 4764)):
#0  0x00007fceea5dd85c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fceebb9966b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fcee317a085 in ?? () from /usr/lib64/libthreadweaver.so.4
#3  0x00007fcee317c8e3 in ?? () from /usr/lib64/libthreadweaver.so.4
#4  0x00007fcee317b547 in ?? () from /usr/lib64/libthreadweaver.so.4
#5  0x00007fcee317b5d8 in ThreadWeaver::Thread::run() () from /usr/lib64/libthreadweaver.so.4
#6  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#8  0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 8 (Thread 0x7fcebe961700 (LWP 4765)):
#0  0x00007fceea5dd85c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fceebb9966b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fcee317a085 in ?? () from /usr/lib64/libthreadweaver.so.4
#3  0x00007fcee317c8e3 in ?? () from /usr/lib64/libthreadweaver.so.4
#4  0x00007fcee317c8fc in ?? () from /usr/lib64/libthreadweaver.so.4
#5  0x00007fcee317c8fc in ?? () from /usr/lib64/libthreadweaver.so.4
#6  0x00007fcee317c8fc in ?? () from /usr/lib64/libthreadweaver.so.4
#7  0x00007fcee317b547 in ?? () from /usr/lib64/libthreadweaver.so.4
#8  0x00007fcee317b5d8 in ThreadWeaver::Thread::run() () from /usr/lib64/libthreadweaver.so.4
#9  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#10 0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#11 0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 7 (Thread 0x7fcebe160700 (LWP 4766)):
#0  0x00007fceea5dd85c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fceebb9966b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fcee317a085 in ?? () from /usr/lib64/libthreadweaver.so.4
#3  0x00007fcee317c8e3 in ?? () from /usr/lib64/libthreadweaver.so.4
#4  0x00007fcee317c8fc in ?? () from /usr/lib64/libthreadweaver.so.4
#5  0x00007fcee317c8fc in ?? () from /usr/lib64/libthreadweaver.so.4
#6  0x00007fcee317c8fc in ?? () from /usr/lib64/libthreadweaver.so.4
#7  0x00007fcee317c8fc in ?? () from /usr/lib64/libthreadweaver.so.4
#8  0x00007fcee317b547 in ?? () from /usr/lib64/libthreadweaver.so.4
#9  0x00007fcee317b5d8 in ThreadWeaver::Thread::run() () from /usr/lib64/libthreadweaver.so.4
#10 0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#11 0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#12 0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 6 (Thread 0x7fcec17cd700 (LWP 4767)):
#0  0x00007fceea5dd85c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fceebb9966b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fcee317a085 in ?? () from /usr/lib64/libthreadweaver.so.4
#3  0x00007fcee317c8e3 in ?? () from /usr/lib64/libthreadweaver.so.4
#4  0x00007fcee317c8fc in ?? () from /usr/lib64/libthreadweaver.so.4
#5  0x00007fcee317b547 in ?? () from /usr/lib64/libthreadweaver.so.4
#6  0x00007fcee317b5d8 in ThreadWeaver::Thread::run() () from /usr/lib64/libthreadweaver.so.4
#7  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#8  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#9  0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 5 (Thread 0x7fcebd95f700 (LWP 4768)):
#0  0x00007fceea5dd85c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fceebb9966b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fcee317a085 in ?? () from /usr/lib64/libthreadweaver.so.4
#3  0x00007fcee317c8e3 in ?? () from /usr/lib64/libthreadweaver.so.4
#4  0x00007fcee317b547 in ?? () from /usr/lib64/libthreadweaver.so.4
#5  0x00007fcee317b5d8 in ThreadWeaver::Thread::run() () from /usr/lib64/libthreadweaver.so.4
#6  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#8  0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7fcea775d700 (LWP 4801)):
#0  0x00007fceea5db5b5 in pthread_mutex_lock () from /lib64/libpthread.so.0
#1  0x00007fcee55f4932 in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fcee55f4d58 in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fcee55f531e in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fceebcb594e in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007fceebc885d2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007fceebc8899d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007fceebb95b52 in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#8  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#9  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#10 0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7fcea6f5c700 (LWP 4802)):
#0  0x00007fcee55f5303 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#1  0x00007fceebcb594e in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fceebc885d2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#3  0x00007fceebc8899d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007fceebb95b52 in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#7  0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fcebcc76700 (LWP 4876)):
#0  0x00007fceea5ddbdb in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fceebb995fd in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fceebb8d1f1 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#3  0x00007fceebb98b05 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007fceea5d8dba in start_thread () from /lib64/libpthread.so.0
#5  0x00007fceea8c102d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fceed6f5760 (LWP 4149)):
[KCrash Handler]
#6  0x00007fceecbbbcfa in KDevelop::SourceFormatterController::adaptEditorIndentationMode(KDevelop::IDocument*, KDevelop::ISourceFormatter*, bool) () from /usr/lib64/libkdevplatformshell.so.4
#7  0x00007fceecbbc718 in KDevelop::SourceFormatterController::documentLoaded(KDevelop::IDocument*) () from /usr/lib64/libkdevplatformshell.so.4
#8  0x00007fceecbc084c in KDevelop::SourceFormatterController::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkdevplatformshell.so.4
#9  0x00007fceebc9b64e in QObject::event(QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#10 0x00007fceeb02e79c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#11 0x00007fceeb0332fa in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#12 0x00007fceec486ba8 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#13 0x00007fceebc8988b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#14 0x00007fceebc8c809 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/qt4/libQtCore.so.4
#15 0x00007fceebcb5e13 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#16 0x00007fcee55f0c39 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#17 0x00007fcee55f5178 in ?? () from /usr/lib64/libglib-2.0.so.0
#18 0x00007fcee55f531e in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#19 0x00007fceebcb58fe in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#20 0x00007fceeb0d4926 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#21 0x00007fceebc885d2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#22 0x00007fceebc8899d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#23 0x00007fceebc8ca1b in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#24 0x000000000040c322 in _start ()

Reported using DrKonqi
Comment 1 Milian Wolff 2011-11-24 18:47:56 UTC
Git commit 1ac0c78c02ede422c60a4028026233a8ef32e184 by Milian Wolff.
Committed on 24/11/2011 at 19:47.
Pushed by mwolff into branch 'master'.

don't crash if non-textdocument was loaded

BUG: 287449

M  +3    -2    shell/sourceformattercontroller.cpp

http://commits.kde.org/kdevplatform/1ac0c78c02ede422c60a4028026233a8ef32e184
Comment 2 Milian Wolff 2011-11-24 18:48:13 UTC
please reopen if this does not fix your crash.