don't crash if non-textdocument was loaded

BUG: 287449